--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
-    "topojson": "^3.0.2",
+    "topojson": "^3.0.2"
   }
 }
